--- a/src/app/pages/accounts-page/account-view/account-view.component.html
+++ b/src/app/pages/accounts-page/account-view/account-view.component.html
@@ -19,7 +19,7 @@
     <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 0" (click)="selectedIndex = 0">{{ 'ACCOUNT_TAB_GENERAL' | translate}}</span>
     <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 1" (click)="selectedIndex = 1">{{ 'ACCOUNT_TAB_USERS' | translate}}</span>
     <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 2" (click)="selectedIndex = 2">{{ 'ACCOUNT_TAB_KEYS' | translate}}</span>
-    <span *ngIf="showBilling()" class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 3" (click)="selectedIndex = 3">{{ 'ACCOUNT_TAB_BILLING' | translate}}</span>
+    <span *ngIf="showBilling()" class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 3" (click)="focusBilling()">{{ 'ACCOUNT_TAB_BILLING' | translate}}</span>
   </div>
 
   <md-tab-group [(selectedIndex)]="selectedIndex">
@@ -63,7 +63,7 @@
     </md-tab>
 
     <md-tab *ngIf="showBilling()">
-      <bills></bills>
+      <bills [focused]="isBillingFocused"></bills>
     </md-tab>
   </md-tab-group>
 </div>
