--- a/src/assets/scss/_entity-index.scss
+++ b/src/assets/scss/_entity-index.scss
@@ -135,6 +135,13 @@ $title-color: #8D8888;
   }
 }
 
+.invoice-table {
+  .entity-index__pagination__buttons {
+    margin-top: 0;
+    padding: 0;
+  }
+}
+
 .codeblock {
   padding: 5px;
   border: 1px solid #bebab0;
