--- a/src/app/shared/components/customer-credit-card-view/customer-credit-card-view.component.html
+++ b/src/app/shared/components/customer-credit-card-view/customer-credit-card-view.component.html
@@ -61,7 +61,7 @@
           <input disabled md-input placeholder="Postal Code" [(ngModel)]="creditCards[0].address.zip">
         </md-input-container>
       </div>
-      <dropdown-component [disabled]="true" [selected]="creditCards[0].address.country" [placeholder]="'Country'" [options]="['USA']"></dropdown-component>
+      <dropdown-component [disabled]="true" [selected]="creditCards[0].address.country" [placeholder]="'Country'" [options]="['US']"></dropdown-component>
     </div>
     <div class="customer-view__card__column">
       <md-input-container [class.small]="ripped">
