--- a/src/app/pages/accounts-page/bill-index/invoice-overdue/invoice-overdue.component.html
+++ b/src/app/pages/accounts-page/bill-index/invoice-overdue/invoice-overdue.component.html
@@ -2,7 +2,7 @@
   <div class="invoice-overdue__icon"><img src="assets/images/alertIcon.svg" alt=""></div>
   <div class="invoice-overdue__title">{{'ACCOUNT_BILLING_OVERDUEWARNING' | translate}}</div>
   <div class="invoice-overdue__text">{{'ACCOUNT_BILLING_OVERDUETEXT' | translate}} {{calculateAmount()}}</div>
-  <div class="invoice-overdue__pay-button" (click)="pay.emit(entity)">{{'ACCOUNT_BILLING_PAY' | translate}}</div>
+  <div class="invoice-overdue__pay-button" (click)="pay.emit(bill)">{{'ACCOUNT_BILLING_PAY' | translate}}</div>
 </div>
 
 
