Add bill entity pages

--- a/src/app/pages/accounts-page/account-view/account-view.component.html
+++ b/src/app/pages/accounts-page/account-view/account-view.component.html
@@ -63,7 +63,7 @@
     </md-tab>
 
     <md-tab *ngIf="showBilling()">
-      <bills [focused]="isBillingFocused"></bills>
+      <bills-overview [focused]="isBillingFocused"></bills-overview>
     </md-tab>
   </md-tab-group>
 </div>
