--- a/src/app/pages/bills-page/bill-view/bill-body/bill-body.component.scss
+++ b/src/app/pages/bills-page/bill-view/bill-body/bill-body.component.scss
@@ -40,4 +40,17 @@
   .entity-view__table-component {
     min-width:500px;
   }
+
+  md-icon {
+    margin-left: auto;
+    width: 18px;
+    height: 18px;
+    font-size: 18px;
+    color: rgba(0, 0, 0, 0.4);
+    cursor: pointer;
+  }
+
+  simple-datepicker {
+    margin-bottom: 10px;
+  }
 }
