--- a/src/app/pages/customers-page/customer-view/customer-view.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-view.component.html
@@ -80,6 +80,9 @@
                   <md-input-container [class.error]="formInvalid && !addressDataForm.form.controls.address.valid">
                     <input required [disabled]="!shippingInfoEditMode" md-input name="address" placeholder="Address" [(ngModel)]="entity.address.line1">
                   </md-input-container>
+                  <md-input-container>
+                    <input [disabled]="!shippingInfoEditMode" md-input name="address2" placeholder="Address 2" [(ngModel)]="entity.address.line2">
+                  </md-input-container>
                   <md-input-container [class.error]="formInvalid && !addressDataForm.form.controls.city.valid">
                     <input required [disabled]="!shippingInfoEditMode" md-input name="city" placeholder="City" [(ngModel)]="entity.address.city">
                   </md-input-container>
@@ -87,12 +90,12 @@
                   <div class="flex-custom customer-view__card__address-row">
                     <autocomplete-input [class.error]="formInvalid && !entity.address.state" [disabled]="!shippingInfoEditMode" [strictFilteringStrategy]="true" [required]="true" [initialValue]="entity.address.state" [placeholder]="'State'" [options]="states" (selected)="entity.address.state = $event"></autocomplete-input>
 
-                    <md-input-container [class.error]="formInvalid && !addressDataForm.form.controls.postalCode.valid">
-                      <input required [disabled]="!shippingInfoEditMode" md-input name="postalCode" placeholder="Postal Code" [(ngModel)]="entity.address.zip">
+                    <md-input-container [class.error]="formInvalid && !isValidZip(entity.address.zip)">
+                      <input required (keydown)="isNumeric($event)" [disabled]="!shippingInfoEditMode" maxlength="5" md-input name="postalCode" placeholder="Postal Code" [(ngModel)]="entity.address.zip">
                     </md-input-container>
                   </div>
 
-                  <autocomplete-input [class.error]="formInvalid && !entity.address.country" [strictFilteringStrategy]="true" [disabled]="!shippingInfoEditMode" [required]="true" [initialValue]="entity.address.country" [placeholder]="'Country'" [options]="['US']" (selected)="entity.address.country = $event"></autocomplete-input>
+                  <autocomplete-input [class.error]="formInvalid && !entity.address.country" [strictFilteringStrategy]="true" [disabled]="!shippingInfoEditMode" [required]="true" [initialValue]="entity.address.country" [placeholder]="'Country'" [options]="['USA']" (selected)="entity.address.country = $event"></autocomplete-input>
                 </form>
 
                 <div *ngIf="shippingInfoEditMode" class="customer-view__card__actions">
