--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -35,13 +35,13 @@
             </div>
 
             <div class="profile-page__content__general__data">
-              <md-input placeholder="First name" [(ngModel)]="userBackup.firstName"></md-input>
-              <md-input placeholder="Last name" [(ngModel)]="userBackup.lastName"></md-input>
+              <md-input placeholder="First Name" [(ngModel)]="userBackup.firstName"></md-input>
+              <md-input placeholder="Last Name" [(ngModel)]="userBackup.lastName"></md-input>
               <md-input-container>
-                <input md-input placeholder="Work phone" type="text" [textMask]="{mask: mask, guide: false}" [(ngModel)]="userSettingsBackup.workPhone">
+                <input md-input placeholder="Work Phone" type="text" [textMask]="{mask: mask, guide: false}" [(ngModel)]="userSettingsBackup.workPhone">
               </md-input-container>
               <md-input-container>
-                <input md-input placeholder="Cell phone" type="text" [textMask]="{mask: mask, guide: false}" [(ngModel)]="userSettingsBackup.cellPhone">
+                <input md-input placeholder="Cell Phone" type="text" [textMask]="{mask: mask, guide: false}" [(ngModel)]="userSettingsBackup.cellPhone">
               </md-input-container>
               <div class="profile-page__content__general__data__dropdown">
                 <autocomplete-input
