--- a/src/app/pages/search-page/advanced-search/advanced-search.component.html
+++ b/src/app/pages/search-page/advanced-search/advanced-search.component.html
@@ -15,7 +15,7 @@
         <md-input class="advanced-search__content__fields__input" placeholder="Address 1" [(ngModel)]="searchOptions.address_line_1"></md-input>
         <md-input class="advanced-search__content__fields__input" placeholder="Address 2" [(ngModel)]="searchOptions.address_line_2"></md-input>
         <md-input class="advanced-search__content__fields__input" placeholder="City" [(ngModel)]="searchOptions.city"></md-input>
-        <md-input class="advanced-search__content__fields__input" placeholder="Postal Code" [(ngModel)]="searchOptions.zip"></md-input>
+        <md-input class="advanced-search__content__fields__input" placeholder="ZIP Code" [(ngModel)]="searchOptions.zip"></md-input>
         <md-input class="advanced-search__content__fields__input" placeholder="State" [(ngModel)]="searchOptions.state"></md-input>
       </div>
 
