--- a/src/app/pages/search-page/perfect-match/perfect-customer/perfect-customer.component.html
+++ b/src/app/pages/search-page/perfect-match/perfect-customer/perfect-customer.component.html
@@ -37,7 +37,7 @@
         </div>
 
         <div class="perfect-entity__info__fields__item">
-          <span class="perfect-entity__info__fields__item__label">Postal Code:</span>
+          <span class="perfect-entity__info__fields__item__label">ZIP Code:</span>
           <span class="perfect-entity__info__fields__item__value">{{customer.address.zip}}</span>
         </div>
       </div>
