--- a/src/app/pages/customers-page/customer-view/customer-add-new/customer-add-new.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-add-new/customer-add-new.component.html
@@ -9,48 +9,48 @@
   <div class="entity-view__card__content customer-add__content">
     <div class="flex-custom">
       <md-input-container class="entity-view__card__content__item" [class.error]="formInvalid && !customer.firstName">
-        <input md-input name="firstName" [(ngModel)]="customer.firstName" placeholder="First Name" required type="text">
+        <input md-input name="firstName" [(ngModel)]="customer.firstName" placeholder="{{'FORMINPUTS_FIRSTNAME' | translate}}" required type="text">
       </md-input-container>
 
       <md-input-container class="entity-view__card__content__item" [class.error]="formInvalid && !customer.lastName">
-        <input md-input name="lastName" [(ngModel)]="customer.lastName" placeholder="Last Name" required type="text">
+        <input md-input name="lastName" [(ngModel)]="customer.lastName" placeholder="{{'FORMINPUTS_LASTNAME' | translate}}" required type="text">
       </md-input-container>
     </div>
 
     <div class="flex-custom">
       <md-input-container class="entity-view__card__content__item" [class.error]="formInvalid && !customer.phone">
-        <input md-input name="phone" [(ngModel)]="customer.phone" [textMask]="{mask: mask, guide: false}" placeholder="Phone" required type="text">
+        <input md-input name="phone" [(ngModel)]="customer.phone" [textMask]="{mask: mask, guide: false}" placeholder="{{'FORMINPUTS_PHONE' | translate}}" required type="text">
       </md-input-container>
 
       <md-input-container class="entity-view__card__content__item" [class.error]="formInvalid && !customer.email">
-        <input md-input name="email" [(ngModel)]="customer.email" placeholder="Email" required type="text">
+        <input md-input name="email" [(ngModel)]="customer.email" placeholder="{{'FORMINPUTS_EMAIL' | translate}}" required type="text">
       </md-input-container>
     </div>
 
     <div class="flex-custom">
       <md-input-container class="entity-view__card__content__item" [class.error]="formInvalid && !customer.address.line1">
-        <input md-input name="address" [(ngModel)]="customer.address.line1" placeholder="Address" required type="text">
+        <input md-input name="address" [(ngModel)]="customer.address.line1" placeholder="{{'FORMINPUTS_ADDRESS' | translate}}" required type="text">
       </md-input-container>
 
       <md-input-container class="entity-view__card__content__item" [class.error]="formInvalid && !customer.address.line2">
-        <input md-input name="address" [(ngModel)]="customer.address.line2" placeholder="Address 2" type="text">
+        <input md-input name="address" [(ngModel)]="customer.address.line2" placeholder="{{'FORMINPUTS_CITY' | translate}}" type="text">
       </md-input-container>
 
     </div>
 
     <div class="flex-custom">
-      <autocomplete-input class="entity-view__card__content__item" [class.error]="formInvalid && !customer.address.state" [strictFilteringStrategy]="true" [required]="true" [initialValue]="customer.address.state" [placeholder]="'State'" [options]="states" (selected)="customer.address.state = $event"></autocomplete-input>
+      <autocomplete-input class="entity-view__card__content__item" [class.error]="formInvalid && !customer.address.state" [strictFilteringStrategy]="true" [required]="true" [initialValue]="customer.address.state" [placeholder]="'FORMINPUTS_STATE' | translate" [options]="states" (selected)="customer.address.state = $event"></autocomplete-input>
 
       <md-input-container class="entity-view__card__content__item" [class.error]="formInvalid && !customer.address.city">
-        <input md-input name="city" [(ngModel)]="customer.address.city" placeholder="City" required type="text">
+        <input md-input name="city" [(ngModel)]="customer.address.city" placeholder="{{'FORMINPUTS_CITY' | translate}}" required type="text">
       </md-input-container>
     </div>
 
     <div class="flex-custom">
-      <autocomplete-input class="entity-view__card__content__item" [class.error]="formInvalid && !customer.address.country" [strictFilteringStrategy]="true" [required]="true" [initialValue]="customer.address.country" [placeholder]="'Country'" [options]="countries" (selected)="customer.address.country = $event"></autocomplete-input>
+      <autocomplete-input class="entity-view__card__content__item" [class.error]="formInvalid && !customer.address.country" [strictFilteringStrategy]="true" [required]="true" [initialValue]="customer.address.country" [placeholder]="'FORMINPUTS_COUNTRY' | translate" [options]="countries" (selected)="customer.address.country = $event"></autocomplete-input>
 
-      <md-input-container class="entity-view__card__content__item" [class.error]="formInvalid && !isValidZip(customer.address.zip)">
-        <input md-input (keydown)="isNumeric($event)" maxlength="5" name="postalCode" [(ngModel)]="customer.address.zip" placeholder="Postal Code" required type="text">
+      <md-input-container class="entity-view__card__content__item" [class.error]="formInvalid && !isZip(customer.address.zip)">
+        <input md-input (keydown)="isAllowedZipKey($event)" maxlength="10" name="postalCode" [(ngModel)]="customer.address.zip" placeholder="{{'FORMINPUTS_ZIP' | translate}}" required type="text">
       </md-input-container>
     </div>
   </div>
