--- a/src/app/pages/customers-page/customer-view/customer-view.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-view.component.html
@@ -75,27 +75,27 @@
 
                 <form #addressDataForm="ngForm">
                   <md-input-container>
-                    <input required disabled md-input name="fullName" placeholder="Full Name" [(ngModel)]="entity.fullName">
+                    <input required disabled md-input name="fullName" placeholder="{{'FORMINPUTS_FULLNAME' | translate}}" [(ngModel)]="entity.fullName">
                   </md-input-container>
-                  <md-input-container [class.error]="formInvalid && !addressDataForm.form.controls.address.valid">
-                    <input required [disabled]="!shippingInfoEditMode" md-input name="address" placeholder="Address" [(ngModel)]="entity.address.line1">
+                  <md-input-container [class.error]="formInvalid && !entity.address.line1">
+                    <input required [disabled]="!shippingInfoEditMode" md-input name="address" placeholder="{{'FORMINPUTS_ADDRESS' | translate}}" [(ngModel)]="entity.address.line1">
                   </md-input-container>
                   <md-input-container>
-                    <input [disabled]="!shippingInfoEditMode" md-input name="address2" placeholder="Address 2" [(ngModel)]="entity.address.line2">
+                    <input [disabled]="!shippingInfoEditMode" md-input name="address2" placeholder="{{'FORMINPUTS_ADDRESS2' | translate}}" [(ngModel)]="entity.address.line2">
                   </md-input-container>
-                  <md-input-container [class.error]="formInvalid && !addressDataForm.form.controls.city.valid">
-                    <input required [disabled]="!shippingInfoEditMode" md-input name="city" placeholder="City" [(ngModel)]="entity.address.city">
+                  <md-input-container [class.error]="formInvalid && !entity.address.city">
+                    <input required [disabled]="!shippingInfoEditMode" md-input name="city" placeholder="{{'FORMINPUTS_CITY' | translate}}" [(ngModel)]="entity.address.city">
                   </md-input-container>
 
                   <div class="flex-custom customer-view__card__address-row">
-                    <autocomplete-input [class.error]="formInvalid && !entity.address.state" [disabled]="!shippingInfoEditMode" [strictFilteringStrategy]="true" [required]="true" [initialValue]="entity.address.state" [placeholder]="'State'" [options]="states" (selected)="entity.address.state = $event"></autocomplete-input>
+                    <autocomplete-input [class.error]="formInvalid && !entity.address.state" [disabled]="!shippingInfoEditMode" [strictFilteringStrategy]="true" [required]="true" [initialValue]="entity.address.state" [placeholder]="'FORMINPUTS_STATE' | translate" [options]="states" (selected)="entity.address.state = $event"></autocomplete-input>
 
-                    <md-input-container [class.error]="formInvalid && !isValidZip(entity.address.zip)">
-                      <input required (keydown)="isNumeric($event)" [disabled]="!shippingInfoEditMode" maxlength="5" md-input name="postalCode" placeholder="Postal Code" [(ngModel)]="entity.address.zip">
+                    <md-input-container [class.error]="formInvalid && !isZip(entity.address.zip)">
+                      <input required (keydown)="isAllowedZipKey($event)" [disabled]="!shippingInfoEditMode" maxlength="10" md-input name="postalCode" placeholder="{{'FORMINPUTS_ZIP' | translate}}" [(ngModel)]="entity.address.zip">
                     </md-input-container>
                   </div>
 
-                  <autocomplete-input [class.error]="formInvalid && !entity.address.country" [strictFilteringStrategy]="true" [disabled]="!shippingInfoEditMode" [required]="true" [initialValue]="entity.address.country" [placeholder]="'Country'" [options]="['USA']" (selected)="entity.address.country = $event"></autocomplete-input>
+                  <autocomplete-input [class.error]="formInvalid && !entity.address.country" [strictFilteringStrategy]="true" [disabled]="!shippingInfoEditMode" [required]="true" [initialValue]="entity.address.country" [placeholder]="'FORMINPUTS_COUNTRY' | translate" [options]="countries" (selected)="entity.address.country = $event"></autocomplete-input>
                 </form>
 
                 <div *ngIf="shippingInfoEditMode" class="customer-view__card__actions">
