--- a/src/app/shared/components/customer-credit-card-view/customer-credit-card-view.component.html
+++ b/src/app/shared/components/customer-credit-card-view/customer-credit-card-view.component.html
@@ -49,32 +49,32 @@
   <md-card-content class="flex-custom">
     <div class="customer-view__card__column customer-view__card__column--first">
       <md-input-container [class.small]="ripped">
-        <input disabled md-input placeholder="Address" [(ngModel)]="creditCards[0].address.line1">
+        <input disabled md-input placeholder="{{'FORMINPUTS_ADDRESS' | translate}}" [(ngModel)]="creditCards[0].address.line1">
       </md-input-container>
       <md-input-container [class.small]="ripped">
-        <input disabled md-input placeholder="City" [(ngModel)]="creditCards[0].address.city">
+        <input disabled md-input placeholder="{{'FORMINPUTS_CITY' | translate}}" [(ngModel)]="creditCards[0].address.city">
       </md-input-container>
 
       <div class="flex-custom customer-view__card__address-row">
-        <dropdown-component [disabled]="true" [selected]="creditCards[0].address.state" [placeholder]="'State'" [options]="states"></dropdown-component>
+        <dropdown-component [disabled]="true" [selected]="creditCards[0].address.state" [placeholder]="'FORMINPUTS_STATE' | translate"></dropdown-component>
         <md-input-container>
-          <input disabled md-input placeholder="Postal Code" [(ngModel)]="creditCards[0].address.zip">
+          <input disabled md-input placeholder="{{'FORMINPUTS_ZIP' | translate}}" [(ngModel)]="creditCards[0].address.zip">
         </md-input-container>
       </div>
-      <dropdown-component [disabled]="true" [selected]="creditCards[0].address.country" [placeholder]="'Country'" [options]="['USA']"></dropdown-component>
+      <dropdown-component [disabled]="true" [selected]="creditCards[0].address.country" [placeholder]="'FORMINPUTS_COUNTRY' | translate"></dropdown-component>
     </div>
     <div class="customer-view__card__column">
       <md-input-container [class.small]="ripped">
-        <input disabled md-input placeholder="Name" [(ngModel)]="creditCards[0].name">
+        <input disabled md-input placeholder="{{'FORMINPUTS_CREDITCARD_NAME' | translate}}" [(ngModel)]="creditCards[0].name">
       </md-input-container>
       <md-input-container [class.small]="ripped">
-        <input disabled md-input placeholder="Type" [(ngModel)]="creditCards[0].type">
+        <input disabled md-input placeholder="{{'FORMINPUTS_CREDITCARD_TYPE' | translate}}" [(ngModel)]="creditCards[0].type">
       </md-input-container>
       <md-input-container [class.small]="ripped">
-        <input disabled md-input placeholder="Number" [(ngModel)]="creditCards[0].maskedNumber">
+        <input disabled md-input placeholder="{{'FORMINPUTS_CREDITCARD_NUMBER' | translate}}" [(ngModel)]="creditCards[0].maskedNumber">
       </md-input-container>
       <md-input-container [class.small]="ripped">
-        <input disabled md-input placeholder="Expiration" [(ngModel)]="creditCards[0].expirationFormatted">
+        <input disabled md-input placeholder="{{'FORMINPUTS_CREDITCARD_EXPIRATION' | translate}}" [(ngModel)]="creditCards[0].expirationFormatted">
       </md-input-container>
     </div>
   </md-card-content>
