--- a/src/app/pages/bills-page/bill-index/billing-summary/billing-summary.component.html
+++ b/src/app/pages/bills-page/bill-index/billing-summary/billing-summary.component.html
@@ -1,9 +1,9 @@
 <div class="billing-summary">
 
   <div class="data">
-    <div *ngIf="!loading; else loader" class="billing-summary__details">
-      <div class="billing-summary__details__count">1,032</div>
-      <div class="billing-summary__details__amount">/$91,02</div>
+    <div *ngIf="sum; else loader" class="billing-summary__details">
+      <div class="billing-summary__details__count">{{sum.count}}</div>
+      <div class="billing-summary__details__amount">/${{sum.price}}</div>
     </div>
 
     <ng-template #loader>
@@ -17,6 +17,13 @@
 
   </div>
 
-  <!--<billing-chart *ngIf="focused" [data]="counts"></billing-chart>-->
+  <div class="chart-container">
+    <div class="chart-container__filter">
+      <div [class.focused]="filterIndex === 0" (click)="updateFilterIndex(0)">1D</div>
+      <div [class.focused]="filterIndex === 1" (click)="updateFilterIndex(1)">1W</div>
+      <div [class.focused]="filterIndex === 2" (click)="updateFilterIndex(2)">1M</div>
+    </div>
 
+    <transaction-summary-chart *ngIf="focused" [embedded]="true" [cumulative]="true" [date]="dateMap" (sum)="updateSum($event)"></transaction-summary-chart>
+  </div>
 </div>
