--- a/src/app/pages/bills-page/bill-index/billing-summary/billing-summary.component.scss
+++ b/src/app/pages/bills-page/bill-index/billing-summary/billing-summary.component.scss
@@ -13,16 +13,12 @@
   margin-bottom: 35px;
   padding: 10px;
 
-  billing-chart {
-    width: 100%;
-  }
-
   .data {
-    width: 360px;
+    width: 340px;
   }
 
   &__title {
-    margin: 5px 0 12px;
+    margin: 12px 0 26px;
     font-weight: 500;
     color: #191919;
     font-size: 20px;
@@ -48,4 +44,33 @@
       font-size: 14px;
     }
   }
+}
+
+.chart-container {
+  width: calc(100% - 380px);
+  margin-left: 40px;
+
+  &__filter {
+    display: flex;
+    font-size: 12px;
+    color: #4a4a4a;
+
+    div {
+      margin: 0 6px;
+      padding: 0 2px;
+      cursor: pointer;
+
+      &:first-of-type {
+        margin-left: auto;
+      }
+    }
+
+    .focused {
+      border-bottom: 3px solid #F16C00;
+    }
+  }
+}
+
+transaction-summary-chart {
+  width: 100%;
 }
