--- a/src/app/pages/bills-page/bill-index/bills-overview/bills-overview.component.scss
+++ b/src/app/pages/bills-page/bill-index/bills-overview/bills-overview.component.scss
@@ -11,7 +11,12 @@
   }
 
   .invoice-overdue {
-    margin-bottom: 20px;
+    margin-bottom: 35px;
     display: block;
   }
+}
+
+invoice-table {
+  display: block;
+  margin-bottom: 35px;
 }
