--- a/src/assets/scss/_dashboard.scss
+++ b/src/assets/scss/_dashboard.scss
@@ -80,6 +80,11 @@ $color-orange: #F16C00;
     box-shadow: 0 0 5px rgba(0,0,0,0.2);
     background-color: white;
 
+    &--embedded {
+      margin-bottom: 0;
+      box-shadow: none;
+    }
+
     .invisible {
       overflow: hidden;
       height: 0;
