--- a/src/app/pages/products-page/product-view/product-add-new/product-add-new.component.html
+++ b/src/app/pages/products-page/product-view/product-add-new/product-add-new.component.html
@@ -27,22 +27,22 @@
       </div>
 
       <div style="margin-top: 15px;" class="product-view__group">
-        <md-checkbox style="font-size: 14px;" [disabled]="mode === view" [checked]="entity.ship === 'true'" (change)="toggleShip()">Ship</md-checkbox>
+        <md-checkbox style="font-size: 14px;" [disabled]="mode === view" [checked]="entity.ship" (change)="toggleShip()">Ship</md-checkbox>
 
-        <md-input-container [class.error]="formInvalid && !entity.shippingDelay && entity.shippingDelay !== 0 && entity.ship === 'true'" class="entity-view__card__content__item">
-          <input [required]="entity.ship === 'true'" md-input [disabled]="mode === view || entity.ship !== 'true'" (keydown)="isNumeric($event)" placeholder="Shipping Delay (minutes)" name="shippingDelay" [(ngModel)]="entity.shippingDelay" type="number">
+        <md-input-container [class.error]="formInvalid && !entity.shippingDelay && entity.shippingDelay !== 0 && entity.ship" class="entity-view__card__content__item">
+          <input [required]="entity.ship" md-input [disabled]="mode === view || !entity.ship" (keydown)="isNumeric($event)" placeholder="Shipping Delay (minutes)" name="shippingDelay" [(ngModel)]="entity.shippingDelay" type="number">
         </md-input-container>
       </div>
 
       <autocomplete-input class="product-autocomplete-input"
-                          [class.error]="formInvalid && (!entity.fulfillmentProvider || !entity.fulfillmentProvider.id) && entity.ship === 'true'"
+                          [class.error]="formInvalid && (!entity.fulfillmentProvider || !entity.fulfillmentProvider.id) && entity.ship"
                           [initialValue]="entity.fulfillmentProvider"
                           [placeholder]="'Fulfillment Provider'"
                           [options]="fulfillmentProviderService.entities$ | async"
                           [mapFunction]="fulfillmentProviderMapper"
                           [showArrow]="true"
-                          [disabled]="mode === view || entity.ship !==  'true'"
-                          [required]="entity.ship === 'true'"
+                          [disabled]="mode === view || !entity.ship"
+                          [required]="entity.ship"
                           (selected)="entity.fulfillmentProvider = $event">
       </autocomplete-input>
 
