Update translations for bill

--- a/src/app/pages/bills-page/bill-view/bill-body/bill-body.component.html
+++ b/src/app/pages/bills-page/bill-view/bill-body/bill-body.component.html
@@ -59,7 +59,7 @@
       <ng-container *ngIf="editMode">
         <md-icon [md-menu-trigger-for]="editOptions">more_vert</md-icon>
         <md-menu #editOptions="mdMenu" x-position="before">
-          <button md-menu-item (click)="showAddDetailsModal()">{{ 'BILL_DETAILS_ADD' | translate}}</button>
+          <button md-menu-item (click)="showAddDetailsModal()">{{ 'BILL_DETAILS_ADDITEM_TITLE' | translate}}</button>
         </md-menu>
       </ng-container>
     </div>
